test/valid/LeastUpperBoundInIf/A.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: A.plume 390 2012-05-21 15:00:43Z tcomp000 $
 */
class A extends Object is